# flux_hopf_lib

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: DEPENDENCIES.md  ECOSYSTEM.md  MIGRATION.md  PUBLISHING.md  VIZ.md
examples/: consumer_mixin_pattern.py  hopf_viz_demo.py  quickstart.py
src/flux_hopf_lib/: __init__.py  constants.py
src/flux_hopf_lib/conduit/: __init__.py  base.py
src/flux_hopf_lib/flux/: __init__.py  defects.py  lattice.py
src/flux_hopf_lib/hopf/: __init__.py  fibration.py  hopfion.py  invariants.py  viz.py
src/flux_hopf_lib/quaternion/: __init__.py  core.py  torch_ops.py
src/flux_hopf_lib/simulation/: __init__.py  kappa.py  relaxation.py  survival.py
src/flux_hopf_lib/utils/: __init__.py  grid.py
tests/: test_flux_conduit.py  test_hopf.py  test_hopf_extended.py  test_quaternion.py  test_simulation_extended.py  test_survival.py
